se arreglaron calculos de grilla hv

--- a/misitio/clases/templates/untitled.html
+++ b/misitio/clases/templates/untitled.html
@@ -3,65 +3,47 @@
 <head>
 
   <link rel="stylesheet" href="{{STATIC_URL}}js/dojo-release-1.10.4/dijit/themes/claro/claro.css">
-  <style type="text/css">
-@import "{{STATIC_URL}}js/dojo-release-1.10.4/dojox/grid/resources/claroGrid.css";
-
-/*Grid needs an explicit height by default*/
-#gridDiv {
-    height: 20em;
-}
-  </style>
-  <script>dojoConfig = {async: true, parseOnLoad: false}</script>
+  
+  <script>dojoConfig = {parseOnLoad: true}</script>
   <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojo/dojo.js'></script>
   
   <script>
- require(['dojo/_base/lang', 'dojox/grid/DataGrid', 'dojo/data/ItemFileWriteStore', 'dojox/grid/cells/dijit', 'dojo/dom', 'dojo/domReady!'],
-  function(lang, DataGrid, ItemFileWriteStore, cells, dom){
-    /*set up data store*/
-    var data = {
-      identifier: "id",
-      items: []
-    };
-    var data_list = [
-      { col1: "normal", col2: false, col3: 'But are not followed by two hexadecimal', col4: 29.91},
-      { col1: "important", col2: false, col3: 'Because a % sign always indicates', col4: 9.33},
-      { col1: "important", col2: false, col3: 'Signs can be selectively', col4: 19.34}
-    ];
-    var rows = 60;
-    for(var i = 0, l = data_list.length; i < rows; i++){
-      data.items.push(lang.mixin({ id: i+1 }, data_list[i%l]));
+require(["dojo/_base/declare", "dijit/form/DateTextBox", "dojo/date/locale", "dojo/dom", "dojo/domReady!"],
+        function(declare, DateTextBox, locale, dom){
+    declare("OracleDateTextBox", DateTextBox, {
+        oracleFormat: {selector: 'date', datePattern: 'yyyy/MM/dd', locale: 'en-us'},
+        value: "", // prevent parser from trying to convert to Date objectdeclare, DateTextBox, locale, 
+        postMixInProperties: function(){ // change value string to Date object
+            this.inherited(arguments);
+            // convert value to Date object
+            this.value = locale.parse(this.value, this.oracleFormat);
+        },
+        // To write back to the server in Oracle format, override the serialize method:
+        serialize: function(dateObject, options){
+            return locale.format(dateObject, this.oracleFormat).toUpperCase();
+        }
+    });
+
+    function showServerValue(){
+        dom.byId('toServerValue').value = document.getElementsByName('oracle')[0].value;
     }
-    var store = new ItemFileWriteStore({data: data});
 
-    /*set up layout*/
-    var layout = [[
-      {'name': 'Column 1', 'field': 'id', 'width': '100px'},
-      {'name': 'Column 2', 'field': 'col2', 'width': '100px', editable: true, type: dojox.grid.cells.CheckBox,styles: 'text-align: center;'},
-      {'name': 'Column 3', 'field': 'col3', 'width': '200px', editable: true},
-      {'name': 'Column 4', 'field': 'col4', 'width': '150px', editable: true}
-    ]];
+    new OracleDateTextBox({
+        value: "31-DEC-2009",
+        name: "oracle",
+        onChange: function(v){ setTimeout(showServerValue, 0)}
+    }, "oracle").startup();
 
-    /*create a new grid*/
-    var grid = new DataGrid({
-        id: 'grid',
-        store: store,
-        structure: layout,
-        rowSelector: '20px'});
-
-    /*append the new grid to the div*/
-    grid.placeAt("gridDiv");
-
-    /*Call startup() to render the grid*/
-    grid.startup();
+    showServerValue();
 });
-  </script>
+</script>
 </head>
 <body class="claro">
-    <p class="info">
-    This example shows how to make columns editable. Please double click any of column 2, column 3 or column 4 to change the cell value.
-</p>
-
-
-<div id="gridDiv"></div>
+<label for="fromServerValue">Oracle date coming from server:</label>
+<input id="fromServerValue" readonly="readonly" disabled="disabled" value="31-DEC-2009" /><br />
+<label for="oracle">Client date:</label>
+<input id="oracle" /><br/>
+<label for="toServerValue">Oracle date going back to server:</label>
+<input id="toServerValue" readonly="readonly" disabled="disabled" />
 </body>
 </html>
